# docs/swagger.yaml
@@ -21,6 +21,8 @@ definitions:
         type: string
       id:
         type: string
+      mobile:
+        type: string
       name:
         type: string
       role:
@@ -64,6 +66,8 @@ definitions:
   github_com_abdulshakoor02_goCrmBackend_internal_core_ports.CreateUserRequest:
     properties:
       email:
+        type: string
+      mobile:
         type: string
       name:
         type: string
@@ -118,6 +122,10 @@ definitions:
     type: object
   github_com_abdulshakoor02_goCrmBackend_internal_core_ports.UpdateUserRequest:
     properties:
+      email:
+        type: string
+      mobile:
+        type: string
       name:
         type: string
       role:
